Update apache conf library

--- a/tests/apache-conf-files/passing/1626-1531.conf
+++ b/tests/apache-conf-files/passing/1626-1531.conf
@@ -32,6 +32,6 @@
 
         # Custom log file locations
         LogLevel warn
-        ErrorLog  /home/denver/www/logs/c-beta.ossguy.com/error.log
-        CustomLog /home/denver/www/logs/c-beta.ossguy.com/access.log combined
+        ErrorLog  /tmp/error.log
+        CustomLog /tmp/access.log combined
 </VirtualHost>
